문의하기 페이지 연결 및 제작

--- a/Project3/src/main/webapp/resources/css/style.css
+++ b/Project3/src/main/webapp/resources/css/style.css
@@ -2810,6 +2810,7 @@ ol {
 
 .map .map-inside .inside-widget {
 	width: 350px;
+	top: 100px;
 	background: #ffffff;
 	text-align: center;
 	padding: 23px 0;
